# CS421WordleGame

./: CHANGELOG.md  CS421WordleGame.cabal  CS421WordleGame.prof  Hard.txt  Medium.txt  README.md
app/: Easy.txt  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: CS421WordleGame-0.1.0.0-inplace-WordleGame.conf  package.cache
lib/: WordleGame.hs
tests/: WordleGameTest.hs
