cabal-version:      2.4
name:               CS421WordleGame
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             maaparna
maintainer:         48700230+maaparna@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library WordleGame
    exposed-modules: WordleGame
    hs-source-dirs: lib
    build-depends: base ^>=4.16.4.0
        , random >=1.2.1.1
        , splitmix >=0.1.0.4
        , text >=1.2.5.0
    default-language: Haskell2010

executable CS421WordleGame
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    --other-modules: WordleGame

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, WordleGame
        , random >=1.2.1.1
        , splitmix >=0.1.0.4
        , text >=1.2.5.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: WordleGameTest.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, WordleGame,text >=1.2.5.0
    hs-source-dirs: tests
    default-language: Haskell2010
